--- a/Variables&Numbers.html
+++ b/Variables&Numbers.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Variables and Numbers</title>
+
 </head>
 <body>
-      <script>
-    // Your JavaScript goes here!
-    console.log("Hello, World!")
-  </script>
-
+<script src="javascript.js"></script>
 </body>
 </html>
